<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>
    <item
            android:title="@string/title_search"
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_baseline_search_24"/>

    <item
            android:id="@+id/navigation_new_note"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/title_new_note"/>

    <item
            android:id="@+id/navigation_chat"
            android:tag="navigation_chat"
            android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
            android:title="@string/title_chat"/>
    <item
            android:title="@string/title_about_me"
            android:id="@+id/navigation_aboutme"
            android:icon="@drawable/ic_baseline_assignment_ind_24"/>


</menu>