<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartActivity" android:background="@drawable/mramor_wallpaper1_low">
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            android:id="@+id/start_name"
            android:textColor="#FCFFED"
            android:fontFamily="@font/audiowide"
            android:textSize="50sp" android:layout_marginBottom="150dp" android:alpha="0.8"/>
    <Button
            android:text="@string/btn_title_login_start"
            android:radius="30dp"
            android:layout_width="0dp"
            android:background="@drawable/btn_login_background"
            android:layout_height="wrap_content" android:id="@+id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintEnd_toStartOf="@+id/btn_register"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp" android:textColor="#000000"
            android:onClick="@+id/"/>
    <Button
            android:text="@string/btn_title_register_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_register"
            android:background="@drawable/btn_register_background"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toEndOf="@+id/btn_login"
            android:textColor="#FFFFFF" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dfa_start"
            android:id="@+id/imageView"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/start_name" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>